--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@ body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
   margin: 0 auto;
+  font-size: 16px;
 }
 
 h1,
@@ -31,6 +32,7 @@ ul {
 picture {
   margin: 0;
   padding: 0;
+  display: flex;
 }
 
 button,
