--- a/styles/light.css
+++ b/styles/light.css
@@ -18,6 +18,11 @@
   display: none;
 }
 
+/*
+  Специально для светлой темы при наличии класса.
+  Здесь окажутся стили, которые нужно переопределить принудительно,
+  переключая тему
+*/
 @media (prefers-color-scheme: light) {
   :root {
     --content-text-color: #353430;
