--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,4 +1,13 @@
+/*
+  Специально для тёмной темы при наличии класса,
+  здесь окажутся стили, которые нужно переопределить принудительно,
+  переключая тему
+*/
 :root .page.theme_dark {
+  /* сохраните этот селектор в приведённом виде.
+    Так стили написанные ниже будут иметь больший вес,
+    чем стили в медиазапросе предпочтений пользователя
+  */
   --primary-color: #000028;
   --secondary-color: #ff0070;
   --content-text-color: #000028;
