--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,8 @@
 
 
 .page {
+  /* сохраните в разметке и стилях класс page. На его 
+  основе работает скрипт. */
   background-image: var(--background-image);
   background-color: var(--primary-color, #000028);
   background-repeat: no-repeat;
