--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,3 +1,7 @@
+/*
+  Переменные для вашего проекта
+  и их переопределение под различные устройства
+*/
 :root {
   --primary-color: #000028;
   --secondary-color: #ff0070;
@@ -13,4 +17,5 @@
   --main-font: "IBM Plex Mono", monospace;
   --background-image: url("../images/cover-image-dark.png");
 }
+
 
